Fixes table insert helper flicker because of the tooltip.

--- a/css/plugins/table.css
+++ b/css/plugins/table.css
@@ -154,6 +154,3 @@
   z-index: 9999;
   white-space: nowrap;
 }
-.fr-insert-helper a.fr-floating-btn {
-  position: absolute;
-}
